[gd_scene load_steps=12 format=3 uid="uid://bg3f0yj7raxnl"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_2o3bt"]
[ext_resource type="PackedScene" uid="uid://b5uvk5x2oxvcm" path="res://oven.tscn" id="3_de03v"]
[ext_resource type="PackedScene" uid="uid://ceg2lwewb4j7b" path="res://trash_can.tscn" id="5_2vr51"]
[ext_resource type="Texture2D" uid="uid://yarrybu1efno" path="res://Art/Scenes/Game_Scene_Kitchen.png" id="5_wss7b"]
[ext_resource type="PackedScene" uid="uid://bxsmphs2mdk86" path="res://tgb.tscn" id="7_m11kt"]
[ext_resource type="PackedScene" uid="uid://dhf8wqd3hpqp1" path="res://bell.tscn" id="8_ynnt8"]
[ext_resource type="PackedScene" uid="uid://bpsvd4lpnb7it" path="res://hud.tscn" id="9_d3hel"]
[ext_resource type="PackedScene" uid="uid://cdv7e8np8daho" path="res://powder_station.tscn" id="10_5byur"]
[ext_resource type="PackedScene" uid="uid://d2sgjpgx21hfx" path="res://donut_crate_donut_holes.tscn" id="10_305t8"]
[ext_resource type="PackedScene" uid="uid://lkugl0w6s2p1" path="res://plate.tscn" id="10_q6fpy"]
[ext_resource type="PackedScene" uid="uid://tlxbigxmnylx" path="res://donut_crate_yeast_donut.tscn" id="11_osqqr"]

[node name="Main" type="Node"]
script = ExtResource("1_2o3bt")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(639, 479.5)
scale = Vector2(5.325, 5.31667)
texture = ExtResource("5_wss7b")
metadata/_edit_lock_ = true

[node name="TGB" parent="." node_paths=PackedStringArray("hud_ref") instance=ExtResource("7_m11kt")]
position = Vector2(1153, 198)
scale = Vector2(1.8, 1.8)
hud_ref = NodePath("../HUD")

[node name="Bell" parent="." instance=ExtResource("8_ynnt8")]
position = Vector2(1259, 155)

[node name="HUD" parent="." instance=ExtResource("9_d3hel")]
anchors_preset = -1
anchor_right = 0.998438
offset_left = 1.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Oven" parent="." instance=ExtResource("3_de03v")]
position = Vector2(219, 259)

[node name="PowderStation" parent="." node_paths=PackedStringArray("hud_ref") instance=ExtResource("10_5byur")]
position = Vector2(634, 245)
scale = Vector2(1, 1)
hud_ref = NodePath("../HUD")

[node name="plate" parent="." instance=ExtResource("10_q6fpy")]
position = Vector2(914, 167)
scale = Vector2(1, 1)

[node name="Donut_Crate_Donut_Holes" parent="." instance=ExtResource("10_305t8")]
position = Vector2(1161, 592)
scale = Vector2(3, 3)

[node name="Donut_Crate_Yeast_Donut" parent="." instance=ExtResource("11_osqqr")]
position = Vector2(1164, 771)
scale = Vector2(3, 3)

[node name="Trash_Can" parent="." instance=ExtResource("5_2vr51")]
position = Vector2(65, 527)
scale = Vector2(0.9, 0.9)

[connection signal="handoff_selection_data" from="." to="PowderStation" method="_on_main_handoff_selection_data"]
[connection signal="sell_donuts" from="Bell" to="TGB" method="_on_bell_sell_donuts"]
[connection signal="tree_exited" from="HUD" to="." method="_on_hud_tree_exited"]
[connection signal="trashed" from="Trash_Can" to="." method="_on_trashed"]
